[gd_scene load_steps=27 format=3 uid="uid://c4pj83hls0dxk"]

[ext_resource type="Texture2D" uid="uid://c1n25exyp04w2" path="res://Art/critters/boar/boar_SW_run_strip.png" id="1_532as"]
[ext_resource type="Script" path="res://Scripts/Game/Animal/boar.gd" id="1_880qp"]
[ext_resource type="Texture2D" uid="uid://2kce2laxkwu6" path="res://Art/critters/boar/boar_NW_run_strip.png" id="2_jn11g"]
[ext_resource type="Texture2D" uid="uid://lncgj6uauxh6" path="res://Art/critters/boar/boar_SE_run_strip.png" id="4_q1i0u"]
[ext_resource type="Texture2D" uid="uid://dkmujk4hhxsvh" path="res://Art/critters/boar/boar_NE_run_strip.png" id="4_yf7j4"]
[ext_resource type="PackedScene" uid="uid://3u0tx52f8sxw" path="res://Scenes/Game/Animals/animal_functions.tscn" id="6_7ptys"]
[ext_resource type="Script" path="res://Scripts/Game/Animal/AttackPlayer.gd" id="7_pdxub"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tdn0o"]
atlas = ExtResource("1_532as")
region = Rect2(0, 0, 41, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjs54"]
atlas = ExtResource("1_532as")
region = Rect2(41, 0, 41, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yi8m"]
atlas = ExtResource("1_532as")
region = Rect2(82, 0, 41, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_irchb"]
atlas = ExtResource("1_532as")
region = Rect2(123, 0, 41, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs8ep"]
atlas = ExtResource("2_jn11g")
region = Rect2(0, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5trj"]
atlas = ExtResource("2_jn11g")
region = Rect2(40, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiq5p"]
atlas = ExtResource("2_jn11g")
region = Rect2(80, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pbj0"]
atlas = ExtResource("2_jn11g")
region = Rect2(120, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrj2"]
atlas = ExtResource("4_q1i0u")
region = Rect2(0, 0, 41, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jjea"]
atlas = ExtResource("4_q1i0u")
region = Rect2(41, 0, 41, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_g66xu"]
atlas = ExtResource("4_q1i0u")
region = Rect2(82, 0, 41, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_32cd8"]
atlas = ExtResource("4_q1i0u")
region = Rect2(123, 0, 41, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_op5iv"]
atlas = ExtResource("4_yf7j4")
region = Rect2(0, 0, 41, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ddnn"]
atlas = ExtResource("4_yf7j4")
region = Rect2(41, 0, 41, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucfbl"]
atlas = ExtResource("4_yf7j4")
region = Rect2(82, 0, 41, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhqp1"]
atlas = ExtResource("4_yf7j4")
region = Rect2(123, 0, 41, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_xsdtu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdn0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjs54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yi8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irchb")
}],
"loop": true,
"name": &"RunLeftDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs8ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5trj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiq5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pbj0")
}],
"loop": true,
"name": &"RunLeftUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jjea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g66xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32cd8")
}],
"loop": true,
"name": &"RunRightDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_op5iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ddnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucfbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhqp1")
}],
"loop": true,
"name": &"RunRightUp",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_r622q"]
radius = 26.0432

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qegm"]
size = Vector2(97, 87)

[node name="Boar" type="Area2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_880qp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_xsdtu")
animation = &"RunRightDown"
frame_progress = 0.980495

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("CircleShape2D_r622q")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, -2.5)
shape = SubResource("RectangleShape2D_4qegm")

[node name="AnimalFunctions" parent="." instance=ExtResource("6_7ptys")]
unique_name_in_owner = true

[node name="AttackPlayer" type="Node" parent="."]
script = ExtResource("7_pdxub")

[node name="SpawnCooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="SpawnCooldown" to="." method="_on_spawn_cooldown_timeout"]
[connection signal="timeout" from="SpawnCooldown" to="AnimalFunctions" method="_on_spawn_cooldown_timeout"]
